<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.main.drafts.AddTextDraftPage"
    android:id="@+id/AddTextDraftPage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/upper_bar_sub"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left_arrow"
            android:rotationY="@integer/angle_rtl_180"/>


        <TextView
            android:id="@+id/Add_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/NewTD"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/TitleTextD"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/white_background"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/TitleTD"
        android:inputType="textMultiLine"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <EditText
        android:id="@+id/SubjtextD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/TitleTextD"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="top"
        android:hint="@string/SubTD"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/ConfirmTextDraft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextD" />

    <Button
        android:id="@+id/ConfirmTextDraft"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/main_button"
        android:fontFamily="@font/montserrat"
        android:padding="3dp"
        android:text="@string/SaveTD"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
